--- a/public/designs/index.html
+++ b/public/designs/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app" class="app">
       <h1>Todos</h1>
-      <ul>
+      <ul class="todo-list">
         <li>Eat</li>
         <li>Code</li>
         <li>Sleep</li>
